syntax error fix

--- a/.github/workflows/load_data.yml
+++ b/.github/workflows/load_data.yml
@@ -1,11 +1,11 @@
 name: Load Raw Data like artifact to wandb
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'src/data/load.py'
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'src/data/load.py'
 
 on: workflow_dispatch
 
